# neat-cfihos-handler

./: .cursorignore  .cursorindexignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODEOWNERS  CONFIG_DOCUMENTATION.md  README.md  README_PYPI.md  pyproject.toml
.github/workflows/: publish-plugin-package.yml  python-publish.yml
cfihos_handler/: __init__.py  _reader.py  plugin.py
cfihos_handler/framework/common/: constants.py  log.py  utils.py
cfihos_handler/framework/importer/: _cfihos2data_model.py  base_model_interpreter.py  cfihos_loader.py  data_sheets_column_mappings.py
cfihos_handler/framework/neat_data_model/: __init__.py  model_creater.py
cfihos_handler/framework/processing/: __init__.py
cognite/neat_cfihos_handler/: _processor.py
cognite/neat_cfihos_handler/framework/: __init__.py
documentation/configuration/: CONFIG_DOCUMENTATION.md
documentation/model_managers/: MODEL_MANAGERS.md
documentation/processors/: SPARSE_PROPERTIES_PROCESSOR.md
examples/: cfihos_plugin_containers_debugging.ipynb  cfihos_plugin_views_debugging.ipynb
examples/src/2.0/: CFIHOS CDF CORE MODEL.csv  CFIHOS CORE CFIHOS object equivalent mapping v2.0.csv  CFIHOS CORE JIP33 information requirements specification v2.0.csv  CFIHOS CORE RDL master object v2.0.csv  CFIHOS CORE data dictionary v2.0.csv  CFIHOS CORE discipline document type v2.0.csv  CFIHOS CORE discipline v2.0.csv  CFIHOS CORE document required per class v2.0.csv  CFIHOS CORE document type v2.0.csv  CFIHOS CORE equipment class property v2.0.csv  CFIHOS CORE equipment class v2.0.csv  CFIHOS CORE handover event v2.0.csv  CFIHOS CORE property groupings v2.0.csv  CFIHOS CORE property picklist values v2.0.csv  (+8 more)
tests/: __init__.py  conftest.py  test_cfihos_loader.py  test_denormalization_mapping.py  test_plugin.py  test_processor.py  test_reader.py  test_sparse_model_manager.py  test_sparse_properties.py
(+38 files in other folders)
