[build-system]
requires = ["setuptools>=69.0", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "neat-cfihos-handler"
version = "0.1.3"
description = "CFIHOS standard processor for NEAT"
authors = [
    {name="Ali Majed", email="ali.majed@cognite.com"},
]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chardet>=5.2.0",
    "cognite-neat==0.123.33",
    "pbr>=7.0.1",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-mock>=3.15.1",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["cfihos_handler*"]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]

[project.entry-points."cognite.neat.plugins.data_model.importers"]
cfihos = "cfihos_handler.plugin:CFIHOS_2DataModelImporter"
